@@ -9,7 +9,6 @@ this structure can be converted to HTML using a template.
 :func:`morepath.render_json`, :func:`morepath.render_html` and
 :func:`morepath.redirect` are members of the public API.
 
-See also :class:`morepath.directive.ViewRegistry`
 """
 
 import json
@@ -17,11 +16,10 @@ from webob.exc import HTTPFound, HTTPNotFound, HTTPForbidden
 from webob import Response as BaseResponse
 
 from .request import Response
-from .template import TemplateEngineRegistry
 
 
 class View(object):
-    """A view as registered in the view registry.
+    """A view as registered with :meth:`morepath.App.get_view`.
 
     :param func: view function. Given a model instance and a request
       argument, this function must return either a structure that can
@@ -36,9 +34,9 @@ class View(object):
       :meth:`morepath.Request.view` but it doesn't have a URL
       and will be 404 Not Found.
     """
-    def __init__(self, func, render, permission, internal):
+    def __init__(self, func, render=None, permission=None, internal=False):
         self.func = func
-        self.render = render
+        self.render = render or render_view
         self.permission = permission
         self.internal = internal
 
@@ -87,60 +85,6 @@ def render_view(content, request):
     :return: a response instance with the content.
     """
     return Response(content, content_type='text/plain')
-
-
-class ViewRegistry(object):
-    """A registry of views.
-
-    :param template_engine_registry: a
-      :class:`morepath.directive.TemplateEngineRegistry` used to render
-      templated views.
-    """
-    factory_arguments = {
-        'template_engine_registry': TemplateEngineRegistry,
-    }
-
-    app_class_arg = True
-
-    def __init__(self, template_engine_registry, app_class):
-        self.template_engine_registry = template_engine_registry
-        self.app_class = app_class
-
-    def predicate_key(self, key_dict):
-        """Given a dictionary create a unique predicate key.
-
-        See also :meth:`reg.Registry.key_dict_to_predicate_key`.
-
-        :param key_dict: a dict containing view registration info,
-          for instance model, request_method, etc.
-        :result: an immutable object representing the predicate.
-        """
-        return self.app_class.get_view.key_dict_to_predicate_key(key_dict)
-
-    def register_view(self, key_dict, view,
-                      render=render_view,
-                      template=None,
-                      permission=None,
-                      internal=False):
-        """Register a view.
-
-        :param key_dict: a dict containing view registration info,
-          for instance model, request_method, etc.
-        :param view: the view function as registered.
-        :param render_view: the render function to use to turn the view
-          function result value into a response. By default the content
-          is interpreted as a string body.
-        :param template: the template used to render the view function
-          result value into a response. By default there is no template.
-        :param permission: the permission class used to check whether the
-          identity is permitted to use the view on the model instance.
-        :param internal: whether this view is internal or not.
-        """
-        if template is not None:
-            render = self.template_engine_registry.get_template_render(
-                template, render)
-        v = View(view, render, permission, internal)
-        self.app_class.get_view.register(v, **key_dict)
 
 
 def render_json(content, request):
